--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             },
             {
                 img: "./assets/TD.jpg",
-                text: "Chúc Trần Thuỳ Dương, 20/10 tự tin, thành công và toả sáng theo các riêng!"
+                text: "Chúc Trần Thuỳ Dương, 20/10 tự tin, thành công và toả sáng theo cách riêng!"
             },
             {
                 img: "./assets/KL.jpg",
